--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -15,7 +15,7 @@ nav {
   // move text under logo down
   .logo {
     margin-bottom: $space * 2;
-    display: inline-block;
+    display: block-inline;
   }
 
   // no link-styling
