Google Tag Manager

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,9 @@
   <script src="{{ site.url }}/js/turbolinks.min.js"></script>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PB9BLF"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div id="container">
     <nav>
       <div>
