--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -54,6 +54,10 @@ p {
   margin-bottom: $space;
 }
 
+ul,
+ol {
+  margin-left: 1em;
+}
 
 sup,
 sub {
@@ -82,7 +86,6 @@ blockquote {
   border-left: solid 2px $text;
   padding-left: $space;
   margin-bottom: $space;
-  margin-left: -$space * 1.3;
   display: block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
