--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,13 @@
 <html lang="en-gb">
 
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-M4K424P');</script>
+  <!-- End Google Tag Manager -->
   <title>{% if page.title == nil %}{{ site.title }}{% endif %}{{ page.title }}</title>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -30,8 +37,9 @@
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PB9BLF"
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M4K424P"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <div id="container">
     <nav>
       <div>
