--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,6 +25,7 @@
   <meta property="og:site_name" content="{{ site.title }}" />
   <meta property="og:type" content="blog" />
   {% if page.cover %}<meta property="og:image" content="{{ site.url}}{{ page.cover }}" />{% endif %}
+  <meta property="article:author" content="https://www.facebook.com/covve" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="{{ site.twitter_username }}" />
