--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,25 +23,20 @@ layout: compress
     <a href="https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url }}&text={{ page.title }}:&via=covve" target="_blank" title="Post on Twitter"><img src="{{ site.url }}/images/tw.svg" alt="twitter svg" width="30"/></a> &nbsp; <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" target="_blank" title="Post on Facebook"><img src="{{ site.url }}/images/fb.svg" alt="facebook svg" width="30"/></a>
   </div>
 
-  <div id="disqus_thread"></div>
-  <script>
 
-  /**
-  *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-  *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-
-  var disqus_config = function () {
-    this.page.url = {{ site.url }}{{ page.url }};  // Replace PAGE_URL with your page's canonical URL variable
-    // this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-  };
-  (function() { // DON'T EDIT BELOW THIS LINE
-  var d = document, s = d.createElement('script');
-  s.src = '//insidecovve.disqus.com/embed.js';
-  s.setAttribute('data-timestamp', +new Date());
-  (d.head || d.body).appendChild(s);
-  })();
-  </script>
-  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  <div id="comments" class="padding--top-bottom-two-spaces" style="padding:30px 0">
+    <h2>Comments</h2>
+    <div id="disqus_thread"></div>
+    <script>
+      (function() {
+      var d = document, s = d.createElement('script');
+      s.src = '//insidecovve.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  </div>
 
 
   {% if page.previous or page.next %}
