--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@ layout: compress
   </div>
 
 
-  <div id="comments" class="padding--top-bottom-two-spaces" style="padding:30px 0">
+  <div id="comments" class="padding--top-bottom-two-spaces">
     <h2>Comments</h2>
     <div id="disqus_thread"></div>
     <script>
